Adding Support for the Query filtering and sorting